recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:9: error: missing parameter type
while( i=>0){
       ^